<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_first">

    <fragment
        android:id="@+id/nav_first"
        android:name="com.example.rpkeffect.Fragments.FirstProviderFragment"
        android:label="@string/menu_first"
        tools:layout="@layout/fragment_first" />

    <fragment
        android:id="@+id/nav_sec"
        android:name="com.example.rpkeffect.Fragments.SecProviderFragment"
        android:label="@string/menu_sec"
        tools:layout="@layout/fragment_second" />

    <fragment
        android:id="@+id/nav_third"
        android:name="com.example.rpkeffect.Fragments.TrdProviderFragment"
        android:label="@string/menu_third"
        tools:layout="@layout/fragment_third" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.rpkeffect.Fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/nav_user_list"
        android:name="com.example.rpkeffect.Fragments.UserListFragment"
        android:label="@string/user_list"
        tools:layout="@layout/user_list_layout"/>

    <fragment
        android:id="@+id/nav_registrate_list"
        android:name="com.example.rpkeffect.Fragments.RegistrationListFragment"
        android:label="@string/registration_list"
        tools:layout="@layout/fragment_registration_list"/>

    <fragment
        android:id="@+id/nav_switcher"
        android:name="com.example.rpkeffect.Fragments.SwitcherFragment"
        android:label="@string/theme"
        tools:layout="@layout/fragment_switcher"/>
</navigation>