<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_marginStart="5dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfui_regular"
        android:textColor="@color/sea"
        android:text="@string/name"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sfui_regular"
        android:textColor="@color/textBlack"
        android:text="@string/status"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sfui_regular"
        android:textColor="@color/textBlack"
        android:text="@string/article"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sfui_regular"
        android:textColor="@color/textBlack"
        android:text="@string/code"
        android:textSize="18sp"/>

</LinearLayout>