<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/about_app"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"/>

    </RelativeLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="3dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/darkGray"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/lightGray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginRegistration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/login"
                    android:fontFamily="sans-serif-light"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/lightGray"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-light"
                android:background="@drawable/button_background"
                android:text="@string/to_registrate"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_check"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:background="@drawable/button_background_check"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/auth_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/auth_logo"
        android:transitionName="@string/transition"/>
    </LinearLayout>

</RelativeLayout>