<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/darkGray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_list_image"
            android:layout_centerVertical="true"
            android:layout_width="60dp"
            android:layout_height="60dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/profile_list_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_list_mail"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:textColor="@color/white"
                android:text="@string/login" />

            <TextView
                android:id="@+id/profile_list_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:textColor="@color/white"
                android:text="@string/profile" />

            <TextView
                android:id="@+id/profile_list_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:textColor="@color/white"
                android:text="@string/date"/>

            <TextView
                android:id="@+id/profile_list_ip"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:text="@string/ip"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>