<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:id="@+id/layout_auth"
    tools:context=".Activities.AuthorizationActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/auth_logo"
        android:contentDescription="@string/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/auth_logo"
        android:transitionName="@string/transition"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-light"
        android:text="@string/about_app"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/authorization"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="3dp"/>

    <androidx.cardview.widget.CardView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/darkGray"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/lightGray"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/lightGray"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/login"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordEditTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColorHint="@color/lightGray"
                    app:passwordToggleTintMode="src_atop"
                    android:layout_marginBottom="20dp"
                    android:inputType="textPassword"
                    app:passwordToggleEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:textColorHint="@color/lightGray"
                        android:textColor="@color/white"
                        android:hint="@string/password"
                        android:fontFamily="sans-serif-light"
                        app:passwordToggleEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:fontFamily="sans-serif-light"
                    android:id="@+id/enterButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:text="@string/enter"
                    android:textColor="#fff"
                    android:layout_marginBottom="10dp"/>

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:enabled="true"/>

                <TextView
                    android:background="@drawable/button_background_next"
                    android:id="@+id/goto_registration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registration"
                    android:layout_margin="5dp"
                    android:textSize="17sp"
                    android:textColor="@color/red"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>