<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/darkGray">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/confirmPhoto"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/auth_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"/>

        <TextView
            android:textAlignment="center"
            android:id="@+id/confirm_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/confirm_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/ip"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/confirm_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true">

                <ImageButton
                    android:id="@+id/button_confirm"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/button_background_confirm"
                    android:contentDescription="@string/confirm"
                    android:src="@drawable/ic_baseline_how_to_reg_24" />

                <ImageButton
                    android:id="@+id/button_reject"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:background="@drawable/button_background_reject"
                    android:contentDescription="@string/reject"
                    android:src="@drawable/ic_baseline_person_add_disabled_24" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/button_cancel"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:layout_gravity="end"
                android:contentDescription="@string/cancel"
                android:src="@drawable/ic_baseline_close_24"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:background="@drawable/button_background_cancel"/>


        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>